--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Android_Academy</string>
     <string name="leftИracket">&lt;</string>
+    <string name="_125_reviews">125 reviews</string>
+    <string name="back">Back</string>
+    <string name="avengers_nend_game">Avengers: End Game</string>
+    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
+    <string name="storyline">Storyline</string>
+    <string name="after_the_devastating_events_of_avengers_infinity_war_the_universe_is_in_ruins_with_the_help_of_remaining_allies_the_avengers_assemble_once_more_in_order_to_reverse_thanos_actions_and_restore_balance_to_the_universe">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
+    <string name="chris_evans">Chris Evans</string>
+    <string name="robert_downey_jr">Robert Downey Jr.</string>
+    <string name="cast">Cast</string>
+    <string name="mark_ruffalo">Mark Ruffalo</string>
+    <string name="chris_hemsworth">Chris Hemsworth</string>
+    <string name="_13">+13</string>
 </resources>
